--- a/src/locales/est.locale.json
+++ b/src/locales/est.locale.json
@@ -7,7 +7,7 @@
         "name": "Päis"
     },
     "main": {
-        "id": "kudu",
+        "id": "kodu",
         "name": "Pealeht",
         "hello_world": "Tere maailm!!!"
     },
