--- a/src/locales/est.locale.json
+++ b/src/locales/est.locale.json
@@ -1,5 +1,11 @@
 {
     "id": "est",
+    "name": "TODO!!!",
+    "about": {
+        "id": "TODO!!!",
+        "name": "TODO!!!",
+        "test": "TODO!!!"
+    },
     "footer": {
         "name": "Jalus"
     },
@@ -11,9 +17,8 @@
         "name": "Pealeht",
         "hello_world": "Tere maailm!!!"
     },
-    "test": {
-        "id": "test",
-        "name": "Testleht",
-        "test": "Lihtsalt suvaline testtekst :)"
+    "q&a": {
+        "id": "TODO!!!",
+        "name": "TODO!!!"
     }
 }
